@@ -13,8 +13,9 @@ import kaaes.spotify.webapi.android.models.Track;
 
 /**
  * Created by anton on 29-10-16.
+ * Singleton to get playlist-data from mopidy
  */
-public class TracksSpotifyPlaylist {
+class TracksSpotifyPlaylist {
     private static TracksSpotifyPlaylist ourInstance = new TracksSpotifyPlaylist();
     private SpotifyPlaylistInterface spotifyPlaylistInterface;
     private boolean changed=false;
@@ -34,18 +35,17 @@ public class TracksSpotifyPlaylist {
     }
     private static boolean gettingTracks;
     private ArrayList<SpotifyPlaylistInterface> listeners=new ArrayList<>();
-    private int inbetween=5000;
-    public void triggerPlaylist(SpotifyPlaylistInterface spotifyPlaylistInterface, boolean forceDisplay){
+    void triggerPlaylist(SpotifyPlaylistInterface spotifyPlaylistInterface, boolean forceDisplay){
         if (forceDisplay&&albumList1.size()>0)
             spotifyPlaylistInterface.spotifyPlaylistReturn(albumList1, albumTracks1,true);
         triggerPlaylist(spotifyPlaylistInterface,5000);
 
     }
-    public void triggerPlaylist(SpotifyPlaylistInterface spotifyPlaylistInterface){
+    void triggerPlaylist(SpotifyPlaylistInterface spotifyPlaylistInterface){
         triggerPlaylist(spotifyPlaylistInterface,5000);
 
     }
-        public void triggerPlaylist(SpotifyPlaylistInterface spotifyPlaylistInterface, int inbetween)
+        void triggerPlaylist(SpotifyPlaylistInterface spotifyPlaylistInterface, int inbetween)
     {
         this.spotifyPlaylistInterface=spotifyPlaylistInterface;
         boolean there=false;
@@ -57,7 +57,6 @@ public class TracksSpotifyPlaylist {
         }
         if (!gettingTracks) {
             gettingTracks = true;
-            this.inbetween = inbetween;
 
             new Thread() {
 
@@ -68,14 +67,12 @@ public class TracksSpotifyPlaylist {
                     JSONArray items = null;
                     while (((items == null) && (nr < 3))) {
 
-                        JSONArray playlist = SpotifyFragment.getPlaylist();
-                        items = playlist;
+                        items = SpotifyFragment.getPlaylist();
                         if (items == null)
 
                             try {
                                 Thread.sleep(1000);
-                                //only do the looper.loop first time Thread is executed.
-
+                                nr++;
                             } catch (Exception e) {
                                 DebugLog.log("error2");
                                 Log.v("samba", Log.getStackTraceString(e));
@@ -93,18 +90,16 @@ public class TracksSpotifyPlaylist {
                         int i = 0;
                         while ((i < items.length()) && gettingTracks) {
                             try {
-                                //Thread.sleep(20);
-                                String trackid = "";
+                                String trackid;
                                 PlaylistItem pi2 = null;
-                                JSONObject o = null;
-                                o = items.getJSONObject(i);
+                                JSONObject o = items.getJSONObject(i);
                                 trackid = o.getJSONObject("track").getString("uri").replace("spotify:track:", "");
                                 if (trackid.length() == 0) continue;
-                                for (int j = 0; j < SpotifyFragment.getThis.data.previousAlbumTracks.size(); j++) {
-                                    PlaylistItem pi = SpotifyFragment.getThis.data.previousAlbumTracks.get(j);
+                                for (int j = 0; j < SpotifyFragment.data.previousAlbumTracks.size(); j++) {
+                                    PlaylistItem pi = SpotifyFragment.data.previousAlbumTracks.get(j);
                                     if (pi.id.equals(trackid)) {
                                         pi2 = pi;
-                                        tracks.add(SpotifyFragment.getThis.data.previousTracksPlaylist.get(j));
+                                        tracks.add(SpotifyFragment.data.previousTracksPlaylist.get(j));
                                         albumList1.add(pi.text);
                                         albumTracks1.add(pi);
                                     }
@@ -112,7 +107,6 @@ public class TracksSpotifyPlaylist {
                                 if (pi2 == null) {
                                     prevAlbum = createNewTrack(albumList1, albumTracks1, prevAlbum, trackid);
                                 }
-                                //DebugLog.log("nr:"+i);
                                 if (i == inbetween) {
                                     updateListview(albumList1, albumTracks1);
                                 }
@@ -132,14 +126,12 @@ public class TracksSpotifyPlaylist {
 
     }
 
-    public void updateListview(ArrayList<String> albumList1, ArrayList<PlaylistItem> albumTracks1) {
+    private void updateListview(ArrayList<String> albumList1, ArrayList<PlaylistItem> albumTracks1) {
         if (changed) {
-
             //update global tracks
             List<Track> mylist = SpotifyFragment.data.tracksPlaylist;
             mylist.clear();
-            for (Track t:tracks)
-                mylist.add(t);
+            mylist.addAll(tracks);
             //update listeners
             if (spotifyPlaylistInterface != null)
                 spotifyPlaylistInterface.spotifyPlaylistReturn(albumList1, albumTracks1,false);
@@ -147,18 +139,18 @@ public class TracksSpotifyPlaylist {
             for (SpotifyPlaylistInterface listener:listeners){
                 try{
                     if (listener!=null)listener.spotifyPlaylistReturn(albumList1, albumTracks1,false);
-                }catch (Exception e){}
+                }catch (Exception e){changed=false;}
             }
 
             changed=false;
         }
     }
 
-    public String createNewTrack(ArrayList<String> albumList1, ArrayList<PlaylistItem> albumTracks1, String prevAlbum, String trackid) {
+    private String createNewTrack(ArrayList<String> albumList1, ArrayList<PlaylistItem> albumTracks1, String prevAlbum, String trackid) {
         if (trackid.length() > 0) {
             Track t = SpotifyFragment.getTrack(trackid);
             tracks.add(t);
-            SpotifyFragment.getThis.data.previousTracksPlaylist.add(t);
+            SpotifyFragment.data.previousTracksPlaylist.add(t);
             final PlaylistItem pi = new PlaylistItem();
             //check for change in album-name
             String extra = "";
@@ -181,23 +173,18 @@ public class TracksSpotifyPlaylist {
                 pi.url = SpotifyFragment.getImageUrl(t.album.images);
 
             } catch (Exception e) {
-                DebugLog.log("error createNewTrack");
-                //gettingTracks=false;
                 return prevAlbum;
-                //Log.v("samba", Log.getStackTraceString(e));
-                //return prevAlbum;
             }
             //album-name can become part of title
             pi.text = t.name + extra;
             //rest of properties
             pi.id = t.id;
             pi.trackNumber = t.track_number;
-            int time = new Double(t.duration_ms / 1000).intValue();
-            pi.time = time;
+            pi.time = Double.valueOf(t.duration_ms / 1000).intValue();
 
             albumList1.add(pi.text);
             albumTracks1.add(pi);
-            SpotifyFragment.getThis.data.previousAlbumTracks.add(pi);
+            SpotifyFragment.data.previousAlbumTracks.add(pi);
             changed=true;
         }
         return prevAlbum;
